Polished Detail Fragment UI

--- a/app/src/main/res/layout/activity_bar_chart.xml
+++ b/app/src/main/res/layout/activity_bar_chart.xml
@@ -11,7 +11,8 @@
 
     <android.support.v7.widget.Toolbar
         android:id="@+id/toolbar"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_width="@dimen/toolbar_size"
+        android:layout_height="@dimen/toolbar_size"
         android:background="@android:color/transparent"/>
+
 </FrameLayout>
