--- a/app/libs/persistent-search/src/main/res/values/colors.xml
+++ b/app/libs/persistent-search/src/main/res/values/colors.xml
@@ -8,7 +8,7 @@
     The default for ?attr/colorControlHighlight might change with next Android versions, so we
     make a copy color of ?attr/colorControlHighlight as button_highlight and then find a lighter
     shade of that color as logo_highlight maintaining consistency for future Android versions-->
-    <color name="button_highlight">#1f000000</color>
+    <color name="ripple_highlight">#1f000000</color> <!--for ripple-->
     <color name="logo_highlight">#f1f1f1</color>
 
     <color name="search_box_black">#212121</color>
