--- a/app/src/main/res/drawable/selector_menu_navigation_item.xml
+++ b/app/src/main/res/drawable/selector_menu_navigation_item.xml
@@ -2,7 +2,7 @@
 <!-- We have to  make a different selector for menu item because on jelly bean. Using
 @drawable/abc_list_selector_holo_light" as our drawable removes the left padding of the menu item-->
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
-    <item android:state_focused="true" android:state_pressed="true" android:drawable="@color/button_highlight"/>
+    <item android:state_focused="true" android:state_pressed="true" android:drawable="@color/ripple_highlight"/>
     <item android:state_pressed="true" android:drawable="@color/logo_highlight"/>
     <item android:state_focused="true" android:drawable="@color/logo_highlight"/>
 
