--- a/app/src/main/res/layout/fragment_detail_section_extras.xml
+++ b/app/src/main/res/layout/fragment_detail_section_extras.xml
@@ -57,9 +57,9 @@
             <TextView
                 android:textAppearance="@style/DetailExtrasDaysTextView"
                 android:id="@+id/text_streak_prev"
-                android:layout_width="@dimen/detail_extras_days_text_view_width"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                tools:text="-3 days"/>
+                tools:text="3 days"/>
 
             <ImageView
                 style="@style/StreakArrow"
@@ -94,7 +94,7 @@
             <TextView
                 android:textAppearance="@style/DetailExtrasDaysTextView"
                 android:id="@+id/text_streak_year_high"
-                android:layout_width="@dimen/detail_extras_days_text_view_width"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 tools:text="3 days"/>
 
@@ -131,7 +131,7 @@
             <TextView
                 android:textAppearance="@style/DetailExtrasDaysTextView"
                 android:id="@+id/text_streak_year_low"
-                android:layout_width="@dimen/detail_extras_days_text_view_width"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 tools:text="3 days"/>
 
@@ -162,24 +162,5 @@
         android:text="@string/button_retry"
         android:visibility="invisible"
         android:contentDescription="@string/button_retry"/>
-
-
-    <!-- This button bar chart button might seem out of place from the main section bar chart
-    button, but I could not get the ripple selector to work. Some bug with the ripple not working
-     if it is placed on top of a background color that's not in its View/ ViewGroup
-     http://stackoverflow.com/questions/35151406/ -->
-    <FrameLayout
-        android:layout_width="match_parent"
-        android:layout_height="?attr/actionBarSize"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true">
-
-        <ImageView
-            style="@style/BarChartButton"
-            android:id="@+id/button_extras_section_bar_chart"
-            android:layout_width="@dimen/bar_chart_button_size"
-            android:layout_height="@dimen/bar_chart_button_size"
-            tools:ignore="ContentDescription"/>
-    </FrameLayout>
 
 </RelativeLayout>
