--- a/app/src/main/res/layout/fragment_detail_section_main.xml
+++ b/app/src/main/res/layout/fragment_detail_section_main.xml
@@ -135,7 +135,7 @@
 
             <TextView
                 android:id="@+id/text_streak"
-                android:layout_width="@dimen/detail_extras_days_text_view_width"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textSize="@dimen/detail_column_item_text_size"
                 android:textColor="@color/black"
