--- a/app/src/main/res/drawable/selector_list_item_first.xml
+++ b/app/src/main/res/drawable/selector_list_item_first.xml
@@ -21,11 +21,11 @@
     <item android:state_window_focused="false" android:drawable="@color/list_item_first_bg_color" />
 
     <!-- Even though these two point to the same resource, have two states so the drawable will invalidate itself when coming out of pressed state. -->
-    <item android:state_focused="true"  android:state_enabled="false" android:state_pressed="true" android:drawable="@drawable/abc_list_selector_holo_light" />
-    <item android:state_focused="true"  android:state_enabled="false"                              android:drawable="@drawable/abc_list_selector_holo_light" />
-    <item android:state_focused="true"                                android:state_pressed="true" android:drawable="@drawable/abc_list_selector_holo_light" />
-    <item android:state_focused="false"                               android:state_pressed="true" android:drawable="@drawable/abc_list_selector_holo_light" />
-    <item android:state_focused="true"                                                             android:drawable="@drawable/abc_list_selector_holo_light" />
+    <item android:state_focused="true"  android:state_enabled="false" android:state_pressed="true" android:drawable="@color/ripple_highlight" />
+    <item android:state_focused="true"  android:state_enabled="false"                              android:drawable="@color/logo_highlight" />
+    <item android:state_focused="true"                                android:state_pressed="true" android:drawable="@color/ripple_highlight" />
+    <item android:state_focused="false"                               android:state_pressed="true" android:drawable="@color/logo_highlight" />
+    <item android:state_focused="true"                                                             android:drawable="@color/logo_highlight" />
 
     <!-- Default, "just hangin' out" state.  This is part of
          ActionBarCompat -->
