--- a/app/src/main/res/menu/menu_navigation.xml
+++ b/app/src/main/res/menu/menu_navigation.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
     <item android:id="@+id/navigation_msg_of_the_day"
-        android:title="@string/navigation_msg_of_the_day"/>
+        android:title="@string/navigation_motd"/>
 
     <item android:id="@+id/navigation_faq"
         android:title="@string/navigation_faq"/>
