fixed a bug that caused progress wheel to hang in onStart()

--- a/app/src/main/res/xml/analytics_tracker.xml
+++ b/app/src/main/res/xml/analytics_tracker.xml
@@ -1,5 +1,6 @@
 <resources>
-    <string name="ga_trackingId">@string/analytics_tracking_id</string>
+    <!-- YOUR ANALYTICS TRACKING ID HERE -->
+    <string name="ga_trackingId"></string>
     <string name="ga_logLevel">verbose</string>
 
     <!--  Problem with auto-tracking is that it tracks all activities and if it is popular,
