Configured Proguard. Added Splash Activity

--- a/app/src/main/res/xml/analytics_tracker.xml
+++ b/app/src/main/res/xml/analytics_tracker.xml
@@ -1,7 +1,7 @@
 <resources>
     <!-- YOUR ANALYTICS TRACKING ID HERE -->
     <string name="ga_trackingId"></string>
-    <string name="ga_logLevel">verbose</string>
+    <!--<string name="ga_logLevel">verbose</string>-->
 
     <!--  Problem with auto-tracking is that it tracks all activities and if it is popular,
     it may reach its quota limit so set it to false-->
