--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -12,6 +12,10 @@
         <item name="android:windowEnterTransition">@transition/detail_enter_transition</item>
     </style>
 
+    <style name="SplashTheme" parent="Theme.AppCompat.NoActionBar">
+        <item name="android:windowBackground">@drawable/bg_actvity_splash</item>
+    </style>
+
     <!-- Overflow menu item -->
     <style name="OverflowPopUpMenuItem">
         <item name="android:padding">12dp</item>
