removed service ids

--- a/app/src/main/res/xml/analytics_tracker.xml
+++ b/app/src/main/res/xml/analytics_tracker.xml
@@ -1,6 +1,5 @@
 <resources>
-    <!-- YOUR ANALYTICS TRACKING ID HERE -->
-    <string name="ga_trackingId">UA-72551263-1</string>
+    <string name="ga_trackingId"></string>
     <!--<string name="ga_logLevel">verbose</string>-->
 
     <!--  Problem with auto-tracking is that it tracks all activities and if it is popular,
